[package]
name = "ocr"
version = "0.0.1"
authors = ["Milan van Zanten <milan@milan.wtf>"]
edition = "2021"
description = "OCR written in Rust."
readme = "README.md"
repository = "https://github.com/milanvanzanten/ocr"
license = "MIT"
keywords = ["ocr", "image"]
categories = ["computer-vision", "multimedia::images"]

[dependencies]
